--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,6 +77,9 @@ flutter:
   - assets/img/konselor.png
   - assets/img/gambar konsul.png
   - assets/img/artikel.jpg
+  - assets/img/news1.png
+  - assets/img/news2.png
+  - assets/img/news3.png
 
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
